--- a/seciton1&2/assignment_question.ipynb
+++ b/seciton1&2/assignment_question.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "print(\"Hello, World!\")"
+    "print(\"Hello, World!\")\n"
    ]
   },
   {
