--- a/section 3/assignment_solutions.ipynb
+++ b/section 3/assignment_solutions.ipynb
@@ -153,18 +153,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* * * * * \n",
-      "* * * * * \n",
-      "* * * * * \n",
-      "* * * * * \n",
-      "* * * * * \n"
+      "* * * * * * * * * * * * * * * * * * * * * * * * * "
      ]
     },
     {
@@ -174,7 +170,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m*\u001b[39m\u001b[38;5;124m\"\u001b[39m, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m()\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;43mabs\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;18;43m__annotations__\u001b[39;49m(\u001b[38;5;28mprint\u001b[39m(\u001b[38;5;241m5\u001b[39m))\n",
+      "Cell \u001b[1;32mIn[1], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m*\u001b[39m\u001b[38;5;124m\"\u001b[39m, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;66;03m# print()\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;43mabs\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;18;43m__annotations__\u001b[39;49m(\u001b[38;5;28mprint\u001b[39m(\u001b[38;5;241m5\u001b[39m))\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'builtin_function_or_method' object has no attribute '__annotations__'"
      ]
     }
